alter layout and api

--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -5,14 +5,13 @@
 <table>
   <thead>
     <tr>
-      <th>Menu</th>
-      <th>Presentation</th>
-      <th>Author</th>
-      <th>Current location</th>
+      <th>Ementa</th>
+      <th>Apresentação</th>
+      <th>Autor</th>
+      <th>Localização Atual</th>
       <th>Status</th>
-      <th>End date deadline</th>
-      <th>Last processing date</th>
-      <th>Last action</th>
+      <th>Data Fim Prazo (Tramitação)</th>
+      
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,8 +25,6 @@
         <td><%= bill.current_location %></td>
         <td><%= bill.status %></td>
         <td><%= bill.end_date_deadline %></td>
-        <td><%= bill.last_processing_date %></td>
-        <td><%= bill.last_action %></td>
         <td><%= link_to 'Show', bill %></td>
         <td><%= link_to 'Edit', edit_bill_path(bill) %></td>
         <td><%= link_to 'Destroy', bill, method: :delete, data: { confirm: 'Are you sure?' } %></td>
