--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -1,22 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Menu:</strong>
+  <strong>Ementa:</strong>
   <%= @bill.menu %>
 </p>
 
 <p>
-  <strong>Presentation:</strong>
+  <strong>Apresentação:</strong>
   <%= @bill.presentation %>
 </p>
 
 <p>
-  <strong>Author:</strong>
+  <strong>Autor:</strong>
   <%= @bill.author %>
 </p>
 
 <p>
-  <strong>Current location:</strong>
+  <strong>Localização Atual:</strong>
   <%= @bill.current_location %>
 </p>
 
@@ -26,17 +26,17 @@
 </p>
 
 <p>
-  <strong>End date deadline:</strong>
+  <strong>Data Fim Prazo (Tramitação):</strong>
   <%= @bill.end_date_deadline %>
 </p>
 
 <p>
-  <strong>Last processing date:</strong>
+  <strong>Data da última Tramitação: </strong>
   <%= @bill.last_processing_date %>
 </p>
 
 <p>
-  <strong>Last action:</strong>
+  <strong>Última Ação:</strong>
   <%= @bill.last_action %>
 </p>
 
