--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -30,8 +30,12 @@
         <td><%= link_to 'Destroy', bill, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    
   </tbody>
 </table>
+  <div class="apple_pagination">
+    <%= will_paginate @bills, :container => false %>
+  </div>
 
 <br>
 
